java/lang/Character/CheckProp test times out

XMLWordPrintable

    • b20
    • sparc_64
    • solaris_11

        #Test Results (version 2)
        #Tue Jan 14 09:40:40 GMT 2014
        #checksum:7d8e1fe04f2834ed
        #-----testdescription-----
        $file=/export/local/aurora/sandbox/sca/vmsqe/testbase/jtreg/nightly/comp_baseline/JT_JDK/test/java/lang/Character/CheckProp.java
        $root=/export/local/aurora/sandbox/sca/vmsqe/testbase/jtreg/nightly/comp_baseline/JT_JDK/test
        keywords=bug7037261 bug7070436 bug7198195
        run=ASSUMED_ACTION main CheckProp\n
        source=CheckProp.java
        title=Check j.l.Character.isLowerCase/isUppercase/isAlphabetic/isIdeographic

        #-----environment-----

        #-----testresult-----
        description=file\:/export/local/aurora/sandbox/sca/vmsqe/testbase/jtreg/nightly/comp_baseline/JT_JDK/test/java/lang/Character/CheckProp.java
        elapsed=977047 0\:16\:17.047
        end=Tue Jan 14 09\:40\:40 GMT 2014
        environment=regtest
        execStatus=Error. Program `/export/local/aurora/sandbox/sca/vmsqe/jdk/nightly/fastdebug/comp_baseline/solaris-sparcv9/bin/java' interrupted\! (timed out?)
        hostname=sc14160076
        javatestOS=SunOS 5.11 (sparc)
        javatestVersion=4.4
        jtregVersion=jtreg 4.1 fcs b06
        script=com.sun.javatest.regtest.RegressionScript
        sections=script_messages build compile main
        start=Tue Jan 14 09\:24\:23 GMT 2014
        test=java/lang/Character/CheckProp.java
        user.name=gtee
        work=/export/local/aurora/sandbox/results/workDir/java/lang/Character

        #section:script_messages
        ----------messages:(6/354)----------
        JDK under test: (/export/local/aurora/sandbox/sca/vmsqe/jdk/nightly/fastdebug/comp_baseline/solaris-sparcv9)
        java version "1.8.0-ea-fastdebug"
        Java(TM) SE Runtime Environment (build 1.8.0-ea-fastdebug-b123)
        Java HotSpot(TM) 64-Bit Server VM (build 25.0-b62-internal-201401140021.vkozlov.8029464-fastdebug, mixed mode)

        Timeout signaled after 960 seconds

        #section:build
        ----------messages:(3/95)----------
        command: build CheckProp
        reason: Named class compiled on demand
        elapsed time (seconds): 17.034
        result: Passed. Build successful

        #section:compile
        ----------messages:(3/248)----------
        command: compile -XDignore.symbol.file=true /export/local/aurora/sandbox/sca/vmsqe/testbase/jtreg/nightly/comp_baseline/JT_JDK/test/java/lang/Character/CheckProp.java
        reason: .class file out of date or does not exist
        elapsed time (seconds): 17.033
        ----------System.out:(0/0)----------
        ----------System.err:(0/0)----------
        result: Passed. Compilation successful

        #section:main
        ----------messages:(3/119)----------
        command: main CheckProp
        reason: Assumed action based on file name: run main CheckProp
        elapsed time (seconds): 960.009
        ----------System.out:(0/0)----------
        ----------System.err:(0/0)----------
        result: Error. Program `/export/local/aurora/sandbox/sca/vmsqe/jdk/nightly/fastdebug/comp_baseline/solaris-sparcv9/bin/java' interrupted! (timed out?)


        test result: Error. Program `/export/local/aurora/sandbox/sca/vmsqe/jdk/nightly/fastdebug/comp_baseline/solaris-sparcv9/bin/java' interrupted! (timed out?)an

              Assignee:
              Rickard Backman (Inactive)
              Reporter:
              Morris Meyer (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: