8031994: java/lang/Character/CheckProp test times out

Reviewed-by: iveresov, roland